--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "d3-zoom": "^3.0.0",
     "framer-motion": "^12.23.12",
     "highlight.js": "^11.11.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
@@ -59,6 +61,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/d3-selection": "^3.0.11",
     "@types/d3-transition": "^3.0.9",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
